@@ -3,7 +3,7 @@ This file is part of khmer, http://github.com/ged-lab/khmer/, and is
 Copyright (C) Michigan State University, 2009-2014. It is licensed under
 the three-clause BSD license; see doc/LICENSE.txt.
 
-# Contact: khmer-project@idyll.org
+Contact: khmer-project@idyll.org
 '''
 
 from khmer._khmer import new_ktable
