@@ -2,7 +2,7 @@
 # This file is part of khmer, http://github.com/ged-lab/khmer/, and is
 # Copyright (C) Michigan State University, 2009-2013. It is licensed under
 # the three-clause BSD license; see doc/LICENSE.txt.
-#
+# Contact: khmer-project@idyll.org
 """ Setup for khmer project. """
 
 import ez_setup
