@@ -1,4 +1,4 @@
-#!/usr/bin/env python
+#!/usr/bin/python
 """versioneer.py
 
 (like a rocketeer, but for versions)
